Fix post title display in dark mode

--- a/flog/static/css/common.css
+++ b/flog/static/css/common.css
@@ -180,7 +180,6 @@ a,
 
 
 a:not([class]) {
-    color: var(--dark);
     text-decoration: underline;
 }
 
